# scrollthescroll

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg
src/scrollthescroll/: __init__.py  __main__.py  openExtract.bat  reading_rates.txt
src/scrollthescroll/data/packageSamples/: extract_index.txt
src/scrollthescroll/data/packageSamples/sample_0/: package_0.txt  package_1.txt  package_2.txt  package_3.txt
