[metadata]
name = scrollthescroll
version = 0.0.1
author = Theo Brown
author_email = theo.elliott.brown@gmail.com
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    numpy>=1.19.2
	opencv-python>=4.5.1
	pyautogui>=0.9.48
	matplotlib>=3.3.4
	pdfplumber
	keyboard

[options.packages.find]
where = src

[options.package_data]
* = *.txt, *.xml

[options.data_files]
data = src\smartReading\reading_rates.txt, src\smartReading\haarcascade_frontalface_default.xml, src\smartReading\haarcascade_eye.xml