[metadata]
name = scrollthescroll
version = 0.0.9.1
author = Theo Brown
author_email = theo.elliott.brown@gmail.com
description = Automatic scrolling with real-time eye-tracking
long_description = file: README.md
long_description_content_type = text/markdown 
url = https://github.com/Theo-eBrown/scrollthescroll
project_urls =
    Bug Tracker = https://github.com/Theo-eBrown/scrollthescroll/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    numpy>=1.19.2
	opencv-python>=4.5.1
	pyautogui>=0.9.48
	matplotlib>=3.3.4
	keyboard

[options.packages.find]
where = src

[options.package_data]
* = *.txt, *.xml

[options.data_files]
data = src\scrollthescroll\reading_rates.txt, src\scrollthescroll\haarcascade_frontalface_default.xml, src\scrollthescroll\haarcascade_eye.xml